	if we get an authentication error during the logon. This avoids
	locking your account on a proxy server from too many failed login
	attempts (Windows networks). We now only do one request if it fails.
	Also changed the history loading to ensure we always load above
	any current chat text.
	Added a scrollbar to the smilies display dialog.

2004-10-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (::tkchat::Retrieve): Fixed a dumb bug introduced in
	1.178 that broke the download. Added a line limit to the size of
	message we attempt to display - too big a message can do funny
	things to the messagebox.

2004-09-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Add user set-able value to fade too.
	(::tkchat::addMessage): Fixed dumb bug that meant messages from
	ircbridge with <xyz> would yield xyz as the sender. 

2004-09-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added another gimmick. You can select a fade
	checkbox on the options dialog and when tkchat looses focus it
	will fade to 50% transparency. On recieving focus again it'll
	switch back to opaque.

	* tkchat.tcl (::tkchat::Retrieve): Bug #1030051. Be more careful
	not to overwrite the current script if we fail to get something
	sensible from the web request.

	* tkchat.tcl (::tkchat::EditOptions): Added support for toplevel
	alpha transparency (supported in the most recent Tk on Win2k/XP).

2004-09-08  Kevin Kenny  <kennykb@acm.org>

	* tkchat.tcl (::tkchat::debug, ::tkchat::SetFont,
	::tkchat::ChangeFont): Changed the code to not trample on the
	fonts belonging to the style, but only the named fonts that tkchat
	uses.
	
2004-09-08  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: fixed a version problem with tile from ActiveTcl
	8.4.6.1 somehow missing [tile::availableThemes]

	* tkchat.tcl: kludged the addHelp a bit more by adding IP so the
	server command /ip password nick is added with the system tag.	
	